--- a/EUD Editor/EUD Editor.vbproj
+++ b/EUD Editor/EUD Editor.vbproj
@@ -102,7 +102,7 @@
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="SergeUtils">
-      <HintPath>C:\Users\skslj\Desktop\EasyCompletionComboBox-1.1.5\TestCombo\bin\SergeUtils.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\EUD Editor2 v 0.14.3\SergeUtils.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
