--- a/EUD Editor/app.config
+++ b/EUD Editor/app.config
@@ -28,31 +28,34 @@
     <userSettings>
         <EUD_Editor.My.MySettings>
             <setting name="StarDirec" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="euddraftDirec" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="StarVersion" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="DatEditColor1" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="DatEditColor2" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="DatEditColor3" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="DatEditColor4" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="mpqDirec" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="Langage" serializeAs="String">
                 <value>한국어(Korean)</value>
+            </setting>
+            <setting name="AutoCompile" serializeAs="String">
+                <value>False</value>
             </setting>
         </EUD_Editor.My.MySettings>
     </userSettings>
