--- a/EUD Editor/app.config
+++ b/EUD Editor/app.config
@@ -57,6 +57,9 @@
             <setting name="AutoCompile" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="IgnoreUpdate" serializeAs="String">
+                <value>False</value>
+            </setting>
         </EUD_Editor.My.MySettings>
     </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
