--- a/EUD Editor/app.config
+++ b/EUD Editor/app.config
@@ -52,13 +52,25 @@
                 <value />
             </setting>
             <setting name="Langage" serializeAs="String">
-                <value>한국어(Korean)</value>
+                <value>Korean</value>
             </setting>
             <setting name="AutoCompile" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="IgnoreUpdate" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="AutoLogin" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Remember" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ID" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value />
             </setting>
         </EUD_Editor.My.MySettings>
     </userSettings>
