--- a/EUD Editor/app.config
+++ b/EUD Editor/app.config
@@ -28,28 +28,28 @@
     <userSettings>
         <EUD_Editor.My.MySettings>
             <setting name="StarDirec" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="euddraftDirec" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="StarVersion" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DatEditColor1" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DatEditColor2" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DatEditColor3" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="DatEditColor4" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="mpqDirec" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Langage" serializeAs="String">
                 <value>Korean</value>
@@ -67,11 +67,11 @@
                 <value>False</value>
             </setting>
             <setting name="ID" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value />
+                <value/>
             </setting>
         </EUD_Editor.My.MySettings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <startup useLegacyV2RuntimeActivationPolicy="true"><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
